# ChangeLog for media-sound/sonata
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-sound/sonata/ChangeLog,v 1.41 2009/05/14 08:31:12 ssuominen Exp $

*sonata-1.6.2 (14 May 2009)

  14 May 2009; Samuli Suominen <ssuominen@gentoo.org> +sonata-1.6.2.ebuild:
  Version bump wrt #264402, thanks to Andreas Rammhold for reporting.

  11 May 2009; Samuli Suominen <ssuominen@gentoo.org> sonata-1.6.ebuild,
  metadata.xml:
  Introduce new USE flag trayicon wrt #267958 by marenz.

*sonata-1.6 (02 Apr 2009)

  02 Apr 2009; Christoph Mende <angelos@gentoo.org> +sonata-1.6.ebuild:
  Version bump

  13 Mar 2009; Tiago Cunha <tcunha@gentoo.org> sonata-1.5.3.ebuild:
  stable sparc

  24 Feb 2009; Joseph Jezak <josejx@gentoo.org> sonata-1.5.3.ebuild:
  Marked ~ppc for bug #222011.

  21 Feb 2009; Christoph Mende <angelos@gentoo.org> -sonata-1.5.2.ebuild:
  Removed old

  20 Dec 2008; Markus Meier <maekke@gentoo.org> sonata-1.5.3.ebuild:
  amd64/x86 stable, bug #251770

*sonata-1.5.3 (14 Oct 2008)

  14 Oct 2008; Christoph Mende <angelos@gentoo.org> -sonata-1.4.2.ebuild,
  +sonata-1.5.3.ebuild:
  Version bump and removed old

  15 Jul 2008; Raúl Porcel <armin76@gentoo.org> sonata-1.5.2.ebuild:
  x86 stable wrt #226183

  13 Jul 2008; Christoph Mende <angelos@gentoo.org> sonata-1.5.2.ebuild:
  Stable on amd64, bug #226183

*sonata-1.5.2 (13 Jun 2008)

  13 Jun 2008; Christoph Mende <angelos@gentoo.org> -sonata-1.5.1.ebuild,
  +sonata-1.5.2.ebuild:
  Version bump with reintroduced optional dbus support, remove old

  15 May 2008; Markus Meier <maekke@gentoo.org> sonata-1.5.1.ebuild:
  add ~x86, bug #222011

  15 May 2008; Christoph Mende <angelos@gentoo.org> sonata-1.5.1.ebuild:
  dbus is no longer optional, bug 222093

  14 May 2008; Markus Rothe <corsair@gentoo.org> sonata-1.5.1.ebuild:
  Added ~ppc64; bug #222011

  14 May 2008; Ferris McCormick <fmccor@gentoo.org> sonata-1.5.1.ebuild: