@@ -1,8 +1,6 @@
 DIST sonata-1.5.3.tar.bz2 272361 RMD160 d6639c8f006bbe55be6939b4d112614ca6919304 SHA1 1876519fb25d1e406bda7c606ec457f847f7e86d SHA256 51385686c421478cec1bb7afef6044f3f6f9ed622ab2a5968f47486a29e95712
 DIST sonata-1.6.2.tar.bz2 315918 RMD160 418eef732cc171d21e301261aa0c6b7751d03ab3 SHA1 33cb3458014b4901eb312bff76c24be125ed7d0a SHA256 7460ac04ac4d6e301578c27496125c1c13b2748e91cdd73ff39f2adcd9680dd2
-DIST sonata-1.6.tar.bz2 309974 RMD160 53363132a97e38a279e525ee4ca5eb8d710d2496 SHA1 7b002bad6d950e0ab06e86ad7bf38de7526ab2ac SHA256 52a7a02644a50a17b26ce1bd7469c0c0d4663d5a09649d979403f01d5ededa89
 EBUILD sonata-1.5.3.ebuild 953 RMD160 7ebaa93bd0fee05e4f4116e342ef2a7525141aa7 SHA1 ce8f8c72fb46e34b796a09bf55c32b0bf951f57a SHA256 aa82ef4a5f20f533fefec798820b7556bde648f5e2ed7bbfee3cbe81e7b9f671
-EBUILD sonata-1.6.2.ebuild 846 RMD160 4183d1919d63bf3bb662e3891b01e6884c2d616d SHA1 142a01d79a57c24fba4a3ac036a0bd4e65b899b0 SHA256 d460b513adf19b0594052ea1cfadcf3dd0f9ba8f02e92753ecec296d0e320823
-EBUILD sonata-1.6.ebuild 1003 RMD160 c01321f4d4544d431bd99f2f7421908db55a4308 SHA1 abba10999dbededafb679f90dcb7fd7754cd406a SHA256 e125f80b035aa85f1c8c360e486cf86a513f3bd4420ef6af0c6fe844d3325655
-MISC ChangeLog 5598 RMD160 2ef860737a7abe3037586ec4df2dfe712f6f5322 SHA1 65df2418f090d3c676de5130cc9b607ffe5b4375 SHA256 a812d0f6535dabd10226694e043e3295b788dcfe4d698ee634b6661e452ba52d
+EBUILD sonata-1.6.2.ebuild 922 RMD160 6f43f509cf3adab2c02022aae6ed79939b0f2061 SHA1 472ee56d4736ac71a3fe207847aac75ab9e1622f SHA256 9f1cad3a8cb31112d191bedff7eed6779547763c12446062f436caa386e0f9a2
+MISC ChangeLog 5750 RMD160 6b8ec11aba435a864153af0105643ee496b2ec1d SHA1 c4117168aceaaed8a6b3c2b4a0f5df2339ee497f SHA256 91dc958a8533fe051c2ea154996dbae0fd740dcec7b27462388a5e8bff7121ce
 MISC metadata.xml 604 RMD160 b3c6878298e4db65bb63b220331b22a90bb8d124 SHA1 2a260a620992418e1ef8cc984cfae5e9dc91cd2e SHA256 7a89230c369a0e20a8ee39b0f06f952bd186fef3a4c60f97ae15e28f714b8129
