@@ -1,6 +1,6 @@
 # Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/sonata/sonata-1.6.2.ebuild,v 1.1 2009/05/14 08:31:12 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/sonata/sonata-1.6.2.ebuild,v 1.2 2009/05/22 03:06:29 ssuominen Exp $
 
 EAPI=2
 inherit distutils
@@ -17,7 +17,7 @@ IUSE="dbus lyrics taglib +trayicon"
 RDEPEND=">=virtual/python-2.5
 	>=dev-python/pygtk-2.12
 	>=x11-libs/gtk+-2:2[jpeg]
-	>=dev-python/python-mpd-0.2
+	>=dev-python/python-mpd-0.2.1
 	dbus? ( dev-python/dbus-python )
 	lyrics? ( dev-python/zsi )
 	taglib? ( >=dev-python/tagpy-0.93 )
@@ -26,3 +26,8 @@ DEPEND="${RDEPEND}
 	dev-util/pkgconfig"
 
 DOCS="CHANGELOG README TODO TRANSLATORS"
+
+src_install() {
+	distutils_src_install
+	rm -rf "${D}"/usr/share/sonata
+}
