@@ -1,6 +1,10 @@
 # ChangeLog for media-sound/sonata
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/sonata/ChangeLog,v 1.41 2009/05/14 08:31:12 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/sonata/ChangeLog,v 1.42 2009/05/22 03:06:29 ssuominen Exp $
+
+  22 May 2009; Samuli Suominen <ssuominen@gentoo.org> -sonata-1.6.ebuild,
+  sonata-1.6.2.ebuild:
+  Remove dummy /usr/share/sonata directory with docs.
 
 *sonata-1.6.2 (14 May 2009)
 
